--- a/src/css/MainScreenstyle.css
+++ b/src/css/MainScreenstyle.css
@@ -1,12 +1,50 @@
 .mainheader {
-    /* background-color: #282c34; */
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    /* min-height: 100vh; */
+    /* display: flex; */
+    /* flex-direction: column; */
+    /* align-items: center; */
     justify-content: center;
-    transition: all .5s;
-    --bs-gutter-x: 0px;
+    --bs-gutter-x: 0px !important;
+  }
+
+  .slideshow {
+    margin: 0 auto;
+    overflow: hidden;
+    width: 100%;
+  }
+  
+  .slideshowSlider {
+    white-space: nowrap;
+    transition: ease 1000ms;
+  }
+  
+  .slide {
+    display: inline-block;
+    height: 400px;
+    object-fit: cover;
+    width: 100%;
+  }
+  
+  /* Buttons */
+  
+  .slideshowDots {
+    text-align: center;
+  }
+  
+  .slideshowDot {
+    display: inline-block;
+    height: 10px;
+    width: 10px;
+    border-radius: 50%;
+  
+    cursor: pointer;
+    margin: 10px 7px 0px;
+  
+    background-color: #c4c4c4;
+  }
+  
+  .slideshowDot.active {
+    background-color: #7d7b7e;
   }
 
 /* Mobile View */
