--- a/src/css/MainScreenstyle.css
+++ b/src/css/MainScreenstyle.css
@@ -10,11 +10,78 @@
     justify-content: center;
     --bs-gutter-x: 0px !important;
   }
+  .card-image{
+    width: 100%;
+    height: fit-content; 
+  }
+  .card-image img{
+    object-fit: cover;
+    width: 100%;
+    height: fit-content;
+    /* max-width: 100%;
+    max-height: 100%; */
+  }
   .indiamap-borderbox{
-    background-color: aqua;
     height: fit-content;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
+  }
+  .cardtext-contentContainer{
+    padding: 40px;
+  }
+  
+  .singlecard-quotedesp-content{
+    width: 100%;
+    height: fit-content;
+  }
+  .singlecard-quotedesp-content p{
+    font-size: 15px;
+    font-family: 'Montserrat', sans-serif;
+    text-align: left;
+    letter-spacing: 0px;
+    opacity: 1;
+    margin: 0;
+  }
+  
+  .singlecard-desp-content{
+    width: 100%;
+    height: fit-content;
+  }
+  .singlecard-desp-content p{
+    font-size: 12px;
+    font-family: 'Montserrat', sans-serif;
+    text-align: left;
+    letter-spacing: 0px;
+    opacity: 1;
+    margin: 0;
+  }
+  .singlecard-artdesp-content p{
+    font-size: 14px;
+    font-family: 'Montserrat', sans-serif;
+    text-align: left;
+    letter-spacing: 0px;
+    opacity: 1;
+    margin: 0;
+  }
+  .buttonanchor a{
+    text-decoration: none !important;
+    color: inherit;
+    cursor:pointer;
+    font-size: 14px;
+    font-family: 'Montserrat', sans-serif;
+    text-align: left;
+    letter-spacing: 0px;
+    opacity: 1;
+  }
+  .buttonanchor a:hover{
+    text-decoration: none !important;
+    color: inherit;
+    cursor:pointer;
+    font-size: 14px;
+    font-family: 'Montserrat', sans-serif;
+    text-align: left;
+    letter-spacing: 0px;
+    opacity: 1;
   }
 
   /*-----------------   Carousel styles   --------------------  */
@@ -28,10 +95,14 @@
     font-size: 18px;
     font-family: 'Montserrat', sans-serif;
     font-weight: bolder;
+    letter-spacing: 0px;
+    opacity: 1;
   }
   .carousel-content p{
     font-size: 12px;
     font-family: 'Montserrat', sans-serif;
+    letter-spacing: 0px;
+    opacity: 1;
   }
 
 
@@ -108,6 +179,39 @@
     font-family: 'Montserrat', sans-serif;
     font-weight: bolder;
     text-align: left;
+    letter-spacing: 0px;
+    opacity: 1;
+  }
+  .singlecard-title-content{
+    width: 100%;
+    height: fit-content;
+  }
+  .singlecard-title-content h3{
+    font-size: 20px;
+    font-family: 'Montserrat', sans-serif;
+    text-align: left;
+    letter-spacing: 0px;
+    opacity: 1;
+  }
+  .singlecard-quotedesp-content{
+    width: 100%;
+    height: fit-content;
+    padding: 10px 0px 10px 0px;
+  }
+  .singlecard-desp-content{
+    width: 100%;
+    height: fit-content;
+    padding: 14px 0px 14px 0px;
+  }
+  .singlecard-artdesp-content{
+    width: 100%;
+    height: fit-content;
+    padding: 10px 0px 10px 0px;
+  }
+  .singlecard-button-content{
+    width: 100%;
+    height: fit-content;
+    padding: 10px 0px 10px 0px;
   }
 }
 
@@ -127,6 +231,39 @@
       font-family: 'Montserrat', sans-serif;
       font-weight: bolder;
       text-align: left;
+      letter-spacing: 0px;
+      opacity: 1;
+    }
+    .singlecard-title-content{
+      width: 100%;
+      height: fit-content;
+    }
+    .singlecard-title-content h3{
+      font-size: 26px;
+      font-family: 'Montserrat', sans-serif;
+      text-align: left;
+      letter-spacing: 0px;
+      opacity: 1;
+    }
+    .singlecard-quotedesp-content{
+      width: 100%;
+      height: fit-content;
+      padding: 10px 0px 10px 0px;
+    }
+    .singlecard-desp-content{
+      width: 100%;
+      height: fit-content;
+      padding: 14px 0px 14px 0px;
+    }
+    .singlecard-artdesp-content{
+      width: 100%;
+      height: fit-content;
+      padding: 10px 0px 10px 0px;
+    }
+    .singlecard-button-content{
+      width: 100%;
+      height: fit-content;
+      padding: 10px 0px 10px 0px;
     }
 }
 
@@ -147,8 +284,40 @@
       font-family: 'Montserrat', sans-serif;
       font-weight: bolder;
       text-align: left;
+      letter-spacing: 0px;
+      opacity: 1;
     }
-    
+    .singlecard-title-content{
+      width: 100%;
+      height: fit-content;
+    }
+    .singlecard-title-content h3{
+      font-size: 28px;
+      font-family: 'Montserrat', sans-serif;
+      text-align: left;
+      letter-spacing: 0px;
+      opacity: 1;
+    }
+    .singlecard-quotedesp-content{
+      width: 100%;
+      height: fit-content;
+      padding: 10px 0px 10px 0px;
+    }
+    .singlecard-desp-content{
+      width: 100%;
+      height: fit-content;
+      padding: 14px 0px 14px 0px;
+    }
+    .singlecard-artdesp-content{
+      width: 100%;
+      height: fit-content;
+      padding: 10px 0px 10px 0px;
+    }
+    .singlecard-button-content{
+      width: 100%;
+      height: fit-content;
+      padding: 10px 0px 10px 0px;
+    }
 }
 
 @media (min-width: 1367px) {
