--- a/src/css/MainScreenstyle.css
+++ b/src/css/MainScreenstyle.css
@@ -12,14 +12,14 @@
   }
   .card-image{
     width: 100%;
-    height: fit-content; 
+    height: 100%; 
   }
   .card-image img{
     object-fit: cover;
     width: 100%;
-    height: fit-content;
-    /* max-width: 100%;
-    max-height: 100%; */
+    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
   }
   .indiamap-borderbox{
     height: fit-content;
@@ -196,22 +196,22 @@
   .singlecard-quotedesp-content{
     width: 100%;
     height: fit-content;
-    padding: 10px 0px 10px 0px;
+    padding: 8px 0px 8px 0px;
   }
   .singlecard-desp-content{
     width: 100%;
     height: fit-content;
-    padding: 14px 0px 14px 0px;
+    padding: 8px 0px 8px 0px;
   }
   .singlecard-artdesp-content{
     width: 100%;
     height: fit-content;
-    padding: 10px 0px 10px 0px;
+    padding: 8px 0px 8px 0px;
   }
   .singlecard-button-content{
     width: 100%;
     height: fit-content;
-    padding: 10px 0px 10px 0px;
+    padding: 10px 0px 0px 0px;
   }
 }
 
@@ -248,22 +248,22 @@
     .singlecard-quotedesp-content{
       width: 100%;
       height: fit-content;
-      padding: 10px 0px 10px 0px;
+      padding: 6px 0px 6px 0px;
     }
     .singlecard-desp-content{
       width: 100%;
       height: fit-content;
-      padding: 14px 0px 14px 0px;
+      padding: 6px 0px 6px 0px;
     }
     .singlecard-artdesp-content{
       width: 100%;
       height: fit-content;
-      padding: 10px 0px 10px 0px;
+      padding: 6px 0px 6px 0px;
     }
     .singlecard-button-content{
       width: 100%;
       height: fit-content;
-      padding: 10px 0px 10px 0px;
+      padding: 8px 0px 8px 0px;
     }
 }
 
@@ -306,7 +306,7 @@
     .singlecard-desp-content{
       width: 100%;
       height: fit-content;
-      padding: 14px 0px 14px 0px;
+      padding: 10px 0px 10px 0px;
     }
     .singlecard-artdesp-content{
       width: 100%;
@@ -316,7 +316,7 @@
     .singlecard-button-content{
       width: 100%;
       height: fit-content;
-      padding: 10px 0px 10px 0px;
+      padding: 12px 0px 12px 0px;
     }
 }
 
