--- a/src/css/MainScreenstyle.css
+++ b/src/css/MainScreenstyle.css
@@ -19,7 +19,10 @@
     padding: 40px 0px 40px 0px;
   }
   .bglightblue{
-    background-color: #e2e8f0;
+    /* background-color: #e2e8f0; */
+    background: linear-gradient(to right, #283048 0%, #859398 100%);
+    /* background: linear-gradient(to bottom left, rgba(25,21,52 , .975), rgba(25,21,52 , .925), rgba(128, 0, 128, .25)) ;  */
+
   }
   .card, .card-header, .card-body, .card-footer{
     border: none;
