--- a/src/css/aboutScreenstyle.css
+++ b/src/css/aboutScreenstyle.css
@@ -2,7 +2,7 @@
 /* --------------    parent container styles    ------------------- */
 
 .cardcontent{
-    width: auto;
+    width: fit-content;
     height: fit-content;
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
@@ -96,7 +96,7 @@
         display: block;
         object-fit: cover;
         object-position: center top;
-        width: 350px;
+        width: 100%;
         height: 150px;
         border-top-left-radius: 15px;
         border-top-right-radius: 15px;
@@ -144,7 +144,7 @@
         display: block;
         object-fit: cover;
         object-position: center top;
-        width: 350px;
+        width: 100%;
         height: 150px;
         border-top-left-radius: 15px;
         border-top-right-radius: 15px;
@@ -186,7 +186,7 @@
         display: block;
         object-fit: cover;
         object-position: center top;
-        width: 350px;
+        width: 100%;
         height: 150px;
         border-top-left-radius: 15px;
         border-top-right-radius: 15px;
