--- a/src/css/aboutScreenstyle.css
+++ b/src/css/aboutScreenstyle.css
@@ -77,7 +77,7 @@
 
 /* Mobile View */
 @media (max-width: 767px) {
-    .HeadContainer{
+    .HeadContainer-about{
         margin: 0 auto;
         max-width: 1280px;
         height: fit-content;
@@ -122,11 +122,11 @@
 
 /* Tablet View */
 @media (min-width: 768px) and (max-width: 1199px){
-    .MainContainer{
+    .MainContainer-about{
         width: 100%;
         height: fit-content;
     }    
-    .HeadContainer{
+    .HeadContainer-about{
         margin: 0 auto;
         max-width: 1280px;
         height: fit-content;
@@ -168,7 +168,7 @@
 
 /* Desktop View */
 @media (min-width: 1200px) {
-    .HeadContainer{
+    .HeadContainer-about{
         margin: 0 auto;
         max-width: 1280px;
         height: fit-content;
@@ -209,7 +209,7 @@
 }
 
 @media (min-width: 1367px) {
-    .HeadContainer{
+    .HeadContainer-about{
         margin: 0 auto;
         background-color:rgb(223, 223, 223);
         max-width: 1300px;
@@ -219,7 +219,7 @@
 }
 
 @media (min-width: 1729px) {
-    .SubContainer{
+    .SubContainer-about{
         margin: 0 auto;
         max-width: 1728px;
         height: fit-content;
