--- a/src/css/aboutScreenstyle.css
+++ b/src/css/aboutScreenstyle.css
@@ -88,6 +88,7 @@
         background-size: cover;
         display: flex;
         justify-content: center;
+        --bs-gutter-x: 0px !important;
     }
     .cardtext-cont{
         padding: 60px 20px 0px 20px;
