--- a/src/css/headerstyle.css
+++ b/src/css/headerstyle.css
@@ -101,6 +101,7 @@
 .artanimation {
   display: inline-block;
   animation-iteration-count: 10;
+  animation: 1s ease-out 0s 1 slideInFromLeft;
 }
 
 .artanimation span {
@@ -113,4 +114,13 @@
 .navtext {
   font-size: 15px;
   font-family: 'Montserrat', sans-serif;
+}
+
+@keyframes slideInFromLeft {
+  0% {
+    transform: scale(3);
+  }
+  100% {
+    transform: translateX(0);
+  }
 }
